# lava

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat  run.bat
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: shader.frag  shader.vert
engine/: CMakeLists.txt
engine/include/lava/: app.h  app.hpp  header.hpp  resource-manager.hpp  resourceloader.hpp
engine/include/lava/core/: window.h  window.hpp
engine/include/lava/data/: vertex.h
engine/include/lava/ecs/: archetype.hpp  component-pool.hpp  component.hpp  entity.hpp  scene-archetype.hpp  scene-view-archetype.hpp  scene-view.hpp  scene.hpp  system.hpp  types.hpp  world.hpp
engine/include/lava/memory/: memory-arena.hpp  pool-arena.hpp
engine/include/lava/rendering/: attribute-description-builder.hpp  buffer.hpp  command.hpp  device.hpp  gpu.hpp  graphics-pipeline-builder.hpp  graphics-pipeline.hpp  mesh.hpp  queue-family.hpp  render-context.hpp  renderpass.hpp  screensize.hpp  shader.hpp  swapchain-support-details.hpp  uniform-buffer.hpp  vertex.hpp  vulkan-renderer.hpp
engine/include/lava/rendering/builders/: graphics-pipeline-builder.hpp
engine/include/lava/rendering/constructors/: _renderpass.hpp  buffer.hpp  commandpool.hpp  debug-messenger.hpp  device.hpp  framebuffers.hpp  graphics-pipeline.hpp  image-views.hpp  instance.hpp  physical-device.hpp  renderpass.hpp  surface.hpp  swapchain.hpp  texture-image.hpp
engine/include/lava/rendering/data/: mesh.hpp  simple-vertex.hpp  texture.hpp  uniform-buffer-object.hpp  vertex.hpp  vkMesh.hpp
engine/include/lava/rendering/vulkan/: queue-family.hpp  swapchain-support-details.hpp  vertex.hpp
engine/include/lava/vulkan/: queue-family.cpp  swapchain-support-details.h
engine/src/: app.cpp  header.cpp  resourceloader.cpp
engine/src/core/: window.cpp
engine/src/ecs/: scene.cpp
engine/src/rendering/: attribute-description-builder.cpp  buffer.cpp  device.cpp  graphics-pipeline-builder.cpp  graphics-pipeline.cpp  queue-family.cpp  render-context.cpp  renderpass.cpp  shader.cpp  swapchain-support-details.cpp  vulkan-renderer.cpp
engine/src/rendering/builders/: graphics-pipeline-builder.cpp
engine/src/rendering/constructors/: _renderpass.cpp  buffer.cpp  framebuffers.cpp  image-views.cpp  swapchain.cpp
engine/src/rendering/data/: texture.cpp  vkmesh.cpp
playground/pong/: CMakeLists.txt
playground/pong/src/: a.cppm  b.cppm  main.cpp
playground/pong/src/components/: hierarchy.hpp  input.hpp  local-transform.hpp  mesh.hpp  player.hpp  world-transform.hpp
playground/pong/src/systems/: input-system.hpp  moving-system.hpp  render-system.hpp  transform-system.hpp
tests/: CMakeLists.txt  ecs.cpp  test.cpp
